--- a/docs/Makefile
+++ b/docs/Makefile
@@ -40,6 +40,12 @@ html:
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
+githubpage:
+	$(SPHINXBUILD) -b html $(SPHINXOPTS) $(SOURCEDIR) $(BUILDDIR)/html
+	@echo
+	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+	cp -R $(BUILDDIR)/html/* $(BUILDDIR)/../
+
 dirhtml:
 	$(SPHINXBUILD) -b dirhtml $(SPHINXOPTS) $(SOURCEDIR) $(BUILDDIR)/dirhtml
 	@echo
